# python-pinboard-api-v2

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
pbapi2/: __init__.py  pinboard_api.py
tests/: README.md  test_pinboard_api.py
