[project]
name = "pinboard-api-v2"
dynamic = ["version"]
description = "A Python client for interacting with the Pinboard V2 API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = ":Barry-Thomas-Paul: Moss", email = "pinboardapi2@pm.amourspirit.net"}
]
keywords = ["pinboard", "api", "bookmarks", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/Amourspirit/python-pinboard-api-v2"
Documentation = "https://github.com/Amourspirit/python-pinboard-api-v2/?tab=readme-ov-file#pinboard-api-python-wrapper"
Repository = "https://github.com/Amourspirit/python-pinboard-api-v2"
Issues = "https://github.com/Amourspirit/python-pinboard-api-v2/issues"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "pbapi2/**/*",
]

[tool.hatch.version]
path = "pbapi2/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]